--- a/public/index.css
+++ b/public/index.css
@@ -97,7 +97,7 @@ header {
 /*  */
 
 main.photos {
-  padding: 1em 0;
+  padding: 2rem 0 3rem;
   display: grid;
   grid-gap: 10px;
   grid-auto-rows: 180px;
@@ -140,6 +140,35 @@ img.image-grid {
   top: 5px;
   right: 5px;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .image-container {
+    padding-bottom: 30px;
+  }
+
+  .favorite {
+    color: #858585;
+    font-size: 1.6rem;
+    left: 10px;
+    bottom: 0;
+    top: unset;
+  }
+
+  .cart {
+    color: #858585;
+    font-size: 1.6rem;
+    bottom: 0;
+    top: unset;
+    right: 10px;
+  }
+
+  main.photos {
+    grid-gap: 15px;
+    grid-auto-rows: 180px;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-auto-flow: dense;
+  }
 }
 
 /* cart */
