--- a/public/index.css
+++ b/public/index.css
@@ -40,13 +40,10 @@ a {
 }
 
 a:visited {
-  color: var(--light-blue);
+  color: var(--white);
 }
 a:hover {
-  color: var(--light-blue);
-}
-a:active {
-  color: var(--light-blue);
+  opacity: 0.8;
 }
 
 /*  */
@@ -66,7 +63,7 @@ a:active {
 /* Header */
 
 header {
-  padding: 0.5em 0;
+  padding: 0.6em 0;
   background-color: var(--purple);
   color: var(--white);
   box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
@@ -104,6 +101,7 @@ main.photos {
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   grid-auto-flow: dense;
 }
+
 /* 
 main.cart-page {
   padding: 10px;
@@ -120,7 +118,7 @@ img.image-grid {
   position: relative;
 }
 
-.favorite {
+.favorite-icon {
   color: #39f6d7;
   font-size: 1.4rem;
   position: absolute;
@@ -133,7 +131,7 @@ img.image-grid {
   opacity: 0.9;
 }
 
-.cart {
+.add-icon {
   color: #39f6d7;
   font-size: 1.4rem;
   position: absolute;
@@ -147,7 +145,7 @@ img.image-grid {
     padding-bottom: 30px;
   }
 
-  .favorite {
+  .favorite-icon {
     color: #858585;
     font-size: 1.6rem;
     left: 10px;
@@ -155,7 +153,7 @@ img.image-grid {
     top: unset;
   }
 
-  .cart {
+  .add-icon {
     color: #858585;
     font-size: 1.6rem;
     bottom: 0;
@@ -169,6 +167,67 @@ img.image-grid {
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     grid-auto-flow: dense;
   }
+}
+
+@media (max-width: 576px) {
+  main.photos {
+    grid-gap: 15px;
+    grid-auto-rows: 400px;
+    grid-template-columns: 1fr;
+    grid-auto-flow: unset;
+  }
+}
+
+/* Artists Page*/
+.artists-title {
+  margin-bottom: 0;
+}
+
+.artists-txt {
+  margin-top: 7px;
+}
+
+.artists-card-container {
+  margin-top: 2.5rem;
+}
+
+.artist-card {
+  width: 300px;
+  height: 325px;
+  border-radius: 1em;
+  position: relative;
+}
+
+.artist-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: inherit;
+}
+
+.artist-info {
+  position: absolute;
+  padding: 1em;
+  background-color: var(--white);
+  width: 70%;
+  border-radius: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: -30px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.5);
+}
+
+.artist-info p {
+  margin: 0;
+  color: var(--purple);
+  font-size: 0.8rem;
+}
+
+.artist-info h3 {
+  margin: 5px 0 0;
+  font-size: 1.3rem;
 }
 
 /* cart */
@@ -244,4 +303,24 @@ div.order-button > button:disabled {
 .big {
   grid-column: span 2;
   grid-row: span 2;
+}
+
+@media (max-width: 576px) {
+  .cart-item-img {
+    height: 120px;
+    width: 120px;
+  }
+
+  .wide {
+    grid-column: unset;
+  }
+
+  .tall {
+    grid-row: unset;
+  }
+
+  .big {
+    grid-column: unset;
+    grid-row: unset;
+  }
 }
