--- a/public/index.css
+++ b/public/index.css
@@ -37,6 +37,7 @@ img {
 
 a {
   text-decoration: none;
+  color: var(--white);
 }
 
 a:visited {
@@ -52,6 +53,7 @@ a:hover {
   width: 92%;
   margin: 0 auto;
   max-width: 1500px;
+  padding: 2rem 0 3rem;
 }
 
 .container-flex {
@@ -67,6 +69,12 @@ header {
   background-color: var(--purple);
   color: var(--white);
   box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
+}
+
+.header-container {
+  width: 92%;
+  margin: 0 auto;
+  max-width: 1500px;
 }
 
 .logo-name {
@@ -189,6 +197,7 @@ img.image-grid {
 
 .artists-card-container {
   margin-top: 2.5rem;
+  width: fit-content;
 }
 
 .artist-card {
@@ -228,6 +237,58 @@ img.image-grid {
 .artist-info h3 {
   margin: 5px 0 0;
   font-size: 1.3rem;
+  color: black;
+}
+
+/* Artist Collection Page - Cards */
+
+.artist-collection-card {
+  margin: 0 auto;
+  width: 430px;
+  height: 190px;
+  border-radius: 1em;
+  position: relative;
+}
+
+.artist-collection-card-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: inherit;
+}
+
+.artist-collection-card-info {
+  text-align: center;
+  position: absolute;
+  padding: 0.5em;
+  background-color: var(--white);
+  width: 50%;
+  border-radius: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: -30px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.5);
+}
+
+.artist-collection-card-info p {
+  margin: 0;
+  color: var(--purple);
+  font-size: 0.8rem;
+}
+
+.artist-collection-card-info h3 {
+  margin: 5px 0 0;
+  font-size: 1.2rem;
+  color: black;
+}
+
+.artist-collection-title {
+  margin-top: 3rem;
+  font-family: var(--ff-secundary);
+  font-weight: 600;
+  font-size: 1.2rem;
 }
 
 /* cart */
