--- a/public/index.css
+++ b/public/index.css
@@ -11,12 +11,6 @@
   --black: #150605;
   --purple: #863ef7;
   --white: #ffffff;
-
-  /*  */
-  --red: #ea453c;
-  --light-blue: #effbfe;
-  --blue: #ace6ec;
-  /*  */
 }
 
 /* General Styles */
@@ -47,19 +41,25 @@ a:hover {
   opacity: 0.8;
 }
 
-/*  */
+/* Layout */
 
 .container {
   width: 92%;
   margin: 0 auto;
   max-width: 1500px;
-  padding: 2rem 0 3rem;
 }
 
 .container-flex {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+}
+
+.photos,
+.artists-page,
+.artist-collection,
+.cart-page {
+  margin: 2rem auto 3rem;
 }
 
 /* Header */
@@ -69,12 +69,6 @@ header {
   background-color: var(--purple);
   color: var(--white);
   box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
-}
-
-.header-container {
-  width: 92%;
-  margin: 0 auto;
-  max-width: 1500px;
 }
 
 .logo-name {
@@ -99,21 +93,15 @@ header {
   margin-right: 20px;
 }
 
-/*  */
+/* main page - photos */
 
-main.photos {
-  padding: 2rem 0 3rem;
+.photos {
   display: grid;
   grid-gap: 10px;
   grid-auto-rows: 180px;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   grid-auto-flow: dense;
 }
-
-/* 
-main.cart-page {
-  padding: 10px;
-} */
 
 img.image-grid {
   width: 100%;
@@ -169,7 +157,7 @@ img.image-grid {
     right: 10px;
   }
 
-  main.photos {
+  .photos {
     grid-gap: 15px;
     grid-auto-rows: 180px;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -178,15 +166,16 @@ img.image-grid {
 }
 
 @media (max-width: 576px) {
-  main.photos {
+  .photos {
     grid-gap: 15px;
-    grid-auto-rows: 400px;
+    grid-auto-rows: 380px;
     grid-template-columns: 1fr;
     grid-auto-flow: unset;
   }
 }
 
 /* Artists Page*/
+
 .artists-title {
   margin-bottom: 0;
 }
@@ -291,11 +280,19 @@ img.image-grid {
   font-size: 1.2rem;
 }
 
-/* cart */
+@media (max-width: 576px) {
+  .artist-collection-card {
+    margin: 0 auto 6rem;
+    width: 90%;
+    height: 180px;
+  }
 
-.cart-page {
-  margin-bottom: 3rem;
+  .artist-collection-card-info h3 {
+    font-size: 1rem;
+  }
 }
+
+/* cart */
 
 .cart-page > h1 {
   text-align: center;
